changing tests to avoid use of facade and complete above of 80% coverage